--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,8 +2,10 @@
 <html xmlns:th="https://www.thymeleaf.org">
 <head lang="en">
     <meta charset="UTF-8"/>
-    <title>ReactJS + Spring Data REST</title>
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <title>Bernyz admin</title>
     <link rel="stylesheet" href="/main.css" />
+    
 </head>
 <body>
 
