--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,13 +2,16 @@
 <html xmlns:th="https://www.thymeleaf.org">
 <head lang="en">
     <meta charset="UTF-8"/>
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
     <title>Bernyz admin</title>
-    <link rel="stylesheet" href="/main.css" />
-    
 </head>
 <body>
-
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="react"></div>
 
     <script src="built/bundle.js"></script>
